--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -15,14 +15,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  gap:10px;
 }
 .content>.item{
-  width: 25%;
+  width: 24%;
   height: 200px;
 }
 .item>img{
   width: 100%;
   height: 100%;
+  border-radius: 10px;
 }
 .collection .loading-overlay {
   top: 0;
