--- a/sections/rich-text.liquid
+++ b/sections/rich-text.liquid
@@ -24,9 +24,9 @@
       {%- for block in section.blocks -%}
         {%- case block.type -%}
           {%- when 'heading' -%}
-            <h2 class="{{ block.settings.heading_size }}" {{ block.shopify_attributes }}>Page này bàn về những con mèo ngáo</h2>
+            <h2 class="{{ block.settings.heading_size }}" {{ block.shopify_attributes }}>Page này bàn về những con mèo</h2>
           {%- when 'text' -%}
-            <div class="rich-text__text rte" {{ block.shopify_attributes }}>Chia sẻ thông tin về những con mèo ngáo </div>
+            <div class="rich-text__text rte" {{ block.shopify_attributes }}>Chia sẻ thông tin về những con mèo  </div>
           {%- when 'button' -%}
             <a{% if block.settings.button_link == blank %} role="link" aria-disabled="true"{% else %} href="{{ block.settings.button_link }}"{% endif %} class="button{% if block.settings.button_style_secondary %} button--secondary{% else %} button--primary{% endif %}" {{ block.shopify_attributes }}>
               {{ block.settings.button_label | escape }}
