--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -22,12 +22,19 @@
   height: 200px;
   cursor: pointer;
   transition: all 0.1s linear;
+  position: relative;
 }
-.item:hover{
+.item::before{
+  content: "";
   background-color: black;
-  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
   opacity: 0.5;
+  width: 100%;
+  height: 200px;
 }
+
 .item>img{
   width: 100%;
   height: 100%;
