--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -33,6 +33,10 @@
   opacity: 0.5;
   width: 100%;
   height: 200px;
+  display: none;
+}
+.item:hover ~.item::before{
+  display: block;
 }
 
 .item>img{
