--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -35,8 +35,8 @@
   height: 200px;
   display: none;
 }
-.item::before:hover{
-  display: block;
+.item:hover >.item::before{
+  display: block; 
 }
 
 .item>img{
