--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -50,7 +50,9 @@
       <div class="content">
         <div class="item">
           <img src="https://i.pinimg.com/550x/9d/a1/25/9da1255cf1e6b1f8d96f0f38ad991ed3.jpg" alt="" srcset="">
+          <div class="bgm"></div>
         </div> 
+        
         <div class="item">
           <img src="https://i.ytimg.com/vi/Zr-qM5Vrd0g/maxresdefault.jpg" alt="" srcset="">
         </div> 
