--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -24,7 +24,7 @@
   transition: all 0.1s linear;
   position: relative;
 }
-.item::before{
+.bgm{
   content: "";
   background-color: black;
   position: absolute;
@@ -35,7 +35,7 @@
   height: 200px;
   display: none;
 }
-.item:hover ~.item::before{
+.item:hover >.bgm{
   display: block; 
   z-index: 1;
 }
