--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -10,21 +10,23 @@
     margin-bottom: 1.5rem;
   }
 }
-.content
-{
+
+.content {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap:10px;
+  gap: 10px;
 }
-.content>.item{
+
+.content>.item {
   width: 23%;
   height: 200px;
   cursor: pointer;
   transition: all 0.1s linear;
   position: relative;
 }
-.bgm{
+
+.bgm {
   content: "";
   background-color: black;
   position: absolute;
@@ -35,16 +37,33 @@
   height: 200px;
   display: block;
 }
-.item:hover >.bgm{
-  display: block; 
+
+.buy {
+  width: 150px;
+  height: 65px;
+  border: 2px solid white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  transform: translate(50%, -50%);
+  display: block;
+}
+
+.item:hover>.bgm {
+  display: block;
   z-index: 1;
 }
 
-.item>img{
+.item>img {
   width: 100%;
   height: 100%;
   border-radius: 10px;
 }
+
 .collection .loading-overlay {
   top: 0;
   right: 0;
