--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -51,6 +51,7 @@
         <div class="item">
           <img src="https://i.pinimg.com/550x/9d/a1/25/9da1255cf1e6b1f8d96f0f38ad991ed3.jpg" alt="" srcset="">
           <div class="bgm"></div>
+          <div class="buy">Mua ngay</div>
         </div> 
         
         <div class="item">
@@ -60,6 +61,7 @@
         <div class="item">
           <img src="https://i.bloganchoi.com/bloganchoi.com/wp-content/uploads/2020/10/meme-hai-huoc-moi-nhat-159-696x642.jpg?fit=700%2C20000&quality=95&ssl=1" alt="" srcset="">
           <div class="bgm"></div>
+
         </div> 
         <div class="item">
           <img src="https://s.keepmeme.com/files/en_posts/20200908/blurred-surprised-cat-meme-5b734a45210ef3b6657bcbe2831715fa.jpg" alt="" srcset="">
