--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -40,11 +40,9 @@
 
 .buy {
   width: 150px;
-  height: 65px;
+  height: 50px;
   border: 2px solid white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  padding: 20px;
   color: white;
   text-align: center;
   position: absolute;
