--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -45,6 +45,8 @@
   padding: 20px;
   color: white;
   text-align: center;
+  display: flex;
+  align-items: center;
   position: absolute;
   top: 50%;
   right: 50%;
