--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -40,11 +40,13 @@
 
 .buy {
   width: 150px;
-  height: 50px;
+  height: 65px;
   border: 2px solid white;
-  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: white;
-
+  text-align: center;
   position: absolute;
   top: 50%;
   right: 50%;
