--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -46,6 +46,7 @@
   justify-content: center;
   align-items: center;
   color: white;
+  padding-top: 10px;
   text-align: center;
   position: absolute;
   top: 50%;
