--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -57,15 +57,18 @@
         <div class="item">
           <img src="https://i.ytimg.com/vi/Zr-qM5Vrd0g/maxresdefault.jpg" alt="" srcset="">
           <div class="bgm"></div>
+          <div class="buy">Mua ngay</div>
         </div> 
         <div class="item">
           <img src="https://i.bloganchoi.com/bloganchoi.com/wp-content/uploads/2020/10/meme-hai-huoc-moi-nhat-159-696x642.jpg?fit=700%2C20000&quality=95&ssl=1" alt="" srcset="">
           <div class="bgm"></div>
+          <div class="buy">Mua ngay</div>
 
         </div> 
         <div class="item">
           <img src="https://s.keepmeme.com/files/en_posts/20200908/blurred-surprised-cat-meme-5b734a45210ef3b6657bcbe2831715fa.jpg" alt="" srcset="">
           <div class="bgm"></div>
+          <div class="buy">Mua ngay</div>
         </div> 
       </div>
    
