--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -53,9 +53,13 @@
   right: 50%;
   transform: translate(50%, -50%);
   display: block;
-  z-index: 5;
+  z-index: 1;
 }
 
+.item:hover>.bgm {
+  display: block;
+  z-index: 1;
+}
 .item:hover>.bgm {
   display: block;
   z-index: 1;
