--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -52,7 +52,7 @@
   top: 50%;
   right: 50%;
   transform: translate(50%, -50%);
-  display: block;
+  display: none;
   z-index: 5;
 }
 /* //hehe */
