--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -49,12 +49,12 @@
   padding-top: 10px;
   text-align: center;
   position: absolute;
-  top: 10%;
+  bottom: 0%;
   right: 50%;
   transform: translate(50%, -50%);
   display: none;
   z-index: 5;
-  transition: all 0.1s linear;
+  transition: all 0.2s linear;
   border-radius: 10px;
   font-size: 16px;
 }
