--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -62,7 +62,7 @@
 /* //hehess */
 .item:hover>.buy {
   display: block;
-  bottom: 50%;
+  transform: translateY(50%);
 }
 .buy:hover{
   background-color: white;
