--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -49,7 +49,7 @@
   padding-top: 10px;
   text-align: center;
   position: absolute;
-  bottom: 0%;
+  top: 50%;
   right: 50%;
   transform: translate(50%, -50%);
   display: none;
@@ -62,7 +62,7 @@
 /* //hehess */
 .item:hover>.buy {
   display: block;
-  transform: translateY(10px);
+  /* transform: translateY(10px); */
 }
 .buy:hover{
   background-color: white;
