--- a/assets/collage.css
+++ b/assets/collage.css
@@ -20,6 +20,10 @@
   width: 60%;
   height: 100%;
 }
+.left>img{
+  width: 100%;
+  height: 100%;
+}
 .right{
   display: flex;
   flex-direction: column;
