--- a/assets/collage.css
+++ b/assets/collage.css
@@ -15,6 +15,8 @@
   width: 100%;
   display: flex;
   gap: 10px;
+  height: 700px;
+  margin: 0 auto;
 }
 .left{
   width: 60%;
@@ -29,6 +31,14 @@
   flex-direction: column;
   gap: 10px;
   width: 60%;
+  height: 100%;
+}
+.up>img{
+  width: 100%;
+  height: 100%;
+}
+.down>img{
+  width: 100%;
   height: 100%;
 }
 @media screen and (max-width: 749px) {
