--- a/sections/collage.liquid
+++ b/sections/collage.liquid
@@ -19,7 +19,7 @@
 
 <link rel="stylesheet" href="{{ 'component-deferred-media.css' | asset_url }}" media="print" onload="this.media='all'">
 
-<div class="content">
+<div class="collage_content">
 
   <div class="left">
     <img src="https://wallpapercave.com/uwp/uwp285830.jpeg" alt="" srcset="">
