--- a/assets/collage.css
+++ b/assets/collage.css
@@ -15,7 +15,7 @@
   width: 100%;
   display: flex;
   gap: 10px;
- 
+  padding: 80px;
   justify-content: center;
   align-items: center;
   margin: 0 auto;
