--- a/sections/collage.liquid
+++ b/sections/collage.liquid
@@ -22,7 +22,7 @@
 <div class="collage_content">
 
   <div class="left">
-    <img src="https://wallpapercave.com/uwp/uwp285830.jpeg" alt="" srcset="">
+    <img src="https://i.pinimg.com/736x/3f/6c/97/3f6c9738c5be03da5ff22dca51569349.jpg" alt="" srcset="">
   </div>
   <div class="right">
     <div class="up">
