--- a/assets/collage.css
+++ b/assets/collage.css
@@ -23,6 +23,7 @@
 .left{
   width: 60%;
   height: 100%;
+  cursor: pointer;
 }
 .left>img{
   width: 100%;
@@ -38,10 +39,12 @@
 .up>img{
   width: 100%;
   height: 100%;
+  cursor: pointer;
 }
 .down>img{
   width: 100%;
   height: 100%;
+  cursor: pointer;
 }
 @media screen and (max-width: 749px) {
   .collage {
